# rarag

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  INSTALL.md  README.md  audit.toml  deny.toml  justfile  project.init.yaml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: dependency-security.yml  policy-checks.yml  rust-hygiene.yml
crates/rarag/: Cargo.toml
crates/rarag-core/: Cargo.toml
crates/rarag-core/src/: config.rs  config_loader.rs  daemon.rs  embeddings.rs  ipc.rs  lib.rs  snapshot.rs  unix_socket.rs  worktree.rs
crates/rarag-core/src/chunking/: csv.rs  markdown.rs  mod.rs  rust.rs  types.rs
crates/rarag-core/src/history/: git.rs  lineage.rs  mod.rs
crates/rarag-core/src/indexing/: lancedb_store.rs  mod.rs  qdrant_store.rs  tantivy_store.rs
crates/rarag-core/src/metadata/: mod.rs  schema.sql  store.rs
crates/rarag-core/src/retrieval/: eval.rs  mod.rs  neighborhood.rs  query.rs  rerank.rs
crates/rarag-core/src/semantic/: mod.rs  rust_analyzer.rs
crates/rarag-core/tests/: chunker_examples_doctests.rs  chunker_fixture.rs  config_binary_entrypoints.rs  config_loader.rs  config_snapshot.rs  daemon_cli_mcp.rs  daemon_transport.rs  document_chunking.rs  eval_fixtures.rs  history_lineage.rs  index_pipeline.rs  lancedb_ann_integration.rs  mcp_protocol.rs  retrieval_modes.rs  semantic_fixture.rs  tantivy_schema_contract.rs  turso_snapshot_store.rs  workspace_bootstrap.rs
crates/rarag-mcp/: Cargo.toml
crates/rarag/src/: cli.rs  client.rs  main.rs  services.rs
crates/raragd/: Cargo.toml
crates/raragd/src/: config.rs  main.rs  server.rs  transport.rs
docs/integrations/: README.md  claude.md  codex.md  goose.md  kimi.md  opencode.md
docs/ops/: lancedb-runtime.md  optimization-rollout.md  qdrant-runtime.md  quickstart.md  systemd-user.md
docs/plans/: 2026-03-07-repository-rag-design.md  2026-03-07-repository-rag-implementation-plan.md  2026-03-07-repository-rag-spec-compatibility-fixes.md  2026-03-07-shared-config-design.md  2026-03-07-shared-config-implementation-plan.md  2026-03-08-install-integrations-docs-implementation-plan.md  2026-03-08-local-ipc-hardening-design.md  2026-03-08-local-ipc-hardening-implementation-plan.md  2026-03-08-rerank-observability-design.md  2026-03-08-rerank-observability-implementation-plan.md  2026-03-08-service-porcelain-followup-implementation-plan.md  2026-03-08-service-porcelain-implementation-plan.md  2026-03-09-doc-history-eval-foundations-design.md  2026-03-09-doc-history-eval-foundations-implementation-plan.md  offline-optimization-workflow.md  (+7 more)
examples/: rarag.example.toml  rarag.openai.example.json
scripts/: check-dependencies-security.sh  check-fast-feedback.sh  check-live-rag-stack.sh  check-references.sh  check-rust-hygiene.sh  check-shell-quality.sh  check-tasks-registry.sh  check-tests.sh  check-tracked-advisories.sh  doc-lint.sh  init-from-backbone.sh  init-repo.sh  run-optimization-experiments.sh
(+51 files in other folders)
