[package]
name = "rarag-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
turso = "0.5.1-pre.1"

[dev-dependencies]
serde_json = "1.0.145"
tempfile = "3.23.0"
