[package]
name = "rarag-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
qdrant-client = { version = "1.17.0", default-features = false, features = ["serde"] }
ra_ap_syntax = "0.0.322"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tantivy = "0.25.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
turso = "0.5.1-pre.1"

[dev-dependencies]
tempfile = "3.23.0"
