[package]
name = "rarag-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
publish = false
license = "GPL-3.0-or-later"

[lib]
path = "src/lib.rs"

[dependencies]
arrow-array = "57.3.0"
arrow-schema = "57.3.0"
futures = "0.3.31"
lancedb = "0.26.2"
ra_ap_syntax = "0.0.322"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rustix = { version = "0.38.44", features = ["process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tantivy = "0.25.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
toml = "0.8.23"
turso = "0.5.1-pre.1"

[dev-dependencies]
tempfile = "3.23.0"
