[package]
name = "rarag"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
publish = false
license = "GPL-3.0-or-later"

[[bin]]
name = "rarag"
path = "src/main.rs"

[dependencies]
rarag-core = { version = "0.1.0", path = "../rarag-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
