[package]
name = "raragd"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
publish = false

[[bin]]
name = "raragd"
path = "src/main.rs"

[dependencies]
rarag-core = { path = "../rarag-core" }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "io-util", "sync", "fs", "signal"] }
